# spikeflow

./: CMakeLists.txt  EventManager.cpp  EventManager.h  IEventManager.h  INetwork.cpp  INetwork.h  INeuron.cpp  INeuron.h  ISynapse.cpp  ISynapse.h  IrisUtils.cpp  IrisUtils.h  LifNetwork.cpp  LifNetwork.h  LifNeuron.cpp  LifNeuron.h  MnistUtils.hpp  PreciseEventManager.cpp  PreciseEventManager.h  README.md  SpikingGeneral.cpp  SpikingGeneral.h  Synapse.cpp  Synapse.h  main.cpp
common/: BasicNetwork.h  BasicNetwork.hpp  IEventManager.cpp  IEventManager.h  INetwork.cpp  INetwork.h  INeuron.cpp  INeuron.h  ISynapse.cpp  ISynapse.h  SpikingGeneral.cpp  SpikingGeneral.h
common/scripts/: DemoScripts.cpp  DemoScripts.h
dataset_utils/: DataCommon.cpp  DataCommon.h  DigitsUtils.cpp  DigitsUtils.h  IrisUtils.cpp  IrisUtils.h  MnistUtils.hpp
event_managers/: PreciseEventManager.cpp  PreciseEventManager.h
layers/: DenseLifLayer.cpp  DenseLifLayer.h  DenseVanillaLayer.cpp  DenseVanillaLayer.h  ILayer.cpp  ILayer.h  ILayerBuilder.cpp  ILayerBuilder.h  LayerMeta.h
losses/: ILossFunction.cpp  ILossFunction.h
network/: IDenseNetwork.cpp  IDenseNetwork.h
neurons/: BasicNeuron.cpp  BasicNeuron.h  BasicNeuronBuilder.cpp  BasicNeuronBuilder.h  INeuronBuilder.h  LifNeuron.cpp  LifNeuron.h  LifNeuronBuilder.cpp  LifNeuronBuilder.h
stats/: LayerStats.cpp  LayerStats.h  Stat.h
synapses/: BasicSynapse.cpp  BasicSynapse.h  ISynapse.cpp  ISynapse.h  ISynapseBuilder.cpp  ISynapseBuilder.h  LifSynapse.cpp  LifSynapse.h  LifSynapseBuilder.cpp  LifSynapseBuilder.h  Synapse.cpp  Synapse.h  VanillaSynapseBuilder.cpp  VanillaSynapseBuilder.h
